--- a/public/ashion-master/css/style.css
+++ b/public/ashion-master/css/style.css
@@ -1286,7 +1286,7 @@ ol {
 .product__item__text .rating i {
 	font-size: 10px;
 	color: #e3c01c;
-	margin-right: 4px;
+	margin-right: 3px;
 }
 
 .product__item__text .rating i:last-child {
@@ -1451,15 +1451,15 @@ ol {
 	margin-bottom: 0;
 }
 
-.filter-range-wrap .range-slider .price-input:after {
-	position: absolute;
-	left: 81px;
-	top: 12px;
-	height: 1px;
-	width: 5px;
-	background: #0d0d0d;
-	content: "";
-}
+/*.filter-range-wrap .range-slider .price-input:after {*/
+/*	position: absolute;*/
+/*	left: 81px;*/
+/*	top: 12px;*/
+/*	height: 1px;*/
+/*	width: 5px;*/
+/*	background: #0d0d0d;*/
+/*	content: "";*/
+/*}*/
 
 .filter-range-wrap .range-slider .price-input input {
 	font-size: 16px;
@@ -2099,7 +2099,7 @@ ol {
 }
 
 .shop__cart__table tbody tr td {
-	padding: 30px 0;
+	padding: 20px 0;
 }
 
 .shop__cart__table tbody tr .cart__product__item {
@@ -3679,4 +3679,272 @@ ol {
 		width: 100%;
 		font-size: 24px;
 	}
+}
+
+.popup-image {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+:where(.css-dev-only-do-not-override-11lehqq).ant-slider .ant-slider-handle::after {
+	box-shadow: 0 0 0 2px #ca1515 !important;
+}
+
+.mobile-menu ul {
+	list-style: none;
+}
+
+.mobile-menu ul li {
+	padding: 10px 0;
+}
+
+.mobile-menu ul li a {
+	color: #111111;
+	font-weight: 600;
+}
+
+a {
+	text-decoration: none !important;
+}
+
+.shop-cart-offcanvas {
+	padding-top: 0;
+	padding-bottom: 0;
+}
+
+.offcanvas-header {
+	width: 100%;
+	margin-bottom: 10px;
+	border-bottom: 1px solid #c7c6c6;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.shop__cart__offcanvas table {
+	width: 100%;
+}
+
+.shop__cart__offcanvas thead {
+	border-bottom: 1px solid #f2f2f2;
+}
+
+.shop__cart__offcanvas thead th {
+	font-size: 14px;
+	color: #111111;
+	font-weight: 600;
+	text-transform: uppercase;
+	padding-bottom: 10px;
+}
+
+.shop__cart__offcanvas tbody tr {
+	border-bottom: 1px solid #f3f2f2;
+}
+
+.shop__cart__offcanvas tbody tr td {
+	padding: 10px 0;
+}
+
+.shop__cart__offcanvas tbody tr .cart__product__item {
+	overflow: hidden;
+	width: 60%;
+}
+
+.shop__cart__offcanvas tbody tr .cart__product__item img {
+	float: left;
+	margin-right: 10px;
+}
+
+.shop__cart__offcanvas tbody tr .cart__product__item .cart__product__item__title {
+	overflow: hidden;
+	padding-top: 20px;
+}
+
+.shop__cart__offcanvas tbody tr .cart__product__item .cart__product__item__title h5 {
+	color: #111111;
+	font-weight: 600;
+	font-size: 14px;
+}
+
+.shop__cart__offcanvas tbody tr .cart__product__item .cart__product__item__title .rating i {
+	font-size: 9px;
+	color: #e3c01c;
+	margin-right: 4px;
+}
+
+.shop__cart__offcanvas tbody tr .cart__price {
+	font-size: 14px;
+	color: #ca1515;
+	font-weight: 600;
+	width: 100px;
+}
+
+.shop__cart__offcanvas tbody tr .cart__quantity {
+	width: 100px;
+}
+
+.shop__cart__offcanvas tbody tr .cart__quantity .pro-qty {
+	border: none;
+	padding: 0;
+	width: 100px;
+	border-radius: 0;
+}
+
+.shop__cart__offcanvas tbody tr .cart__quantity .pro-qty input {
+	color: #444444;
+}
+
+.shop__cart__offcanvas tbody tr .cart__quantity .pro-qty .qtybtn {
+	font-size: 14px;
+	color: #444444;
+}
+
+.shop__cart__offcanvas tbody tr .cart__total {
+	font-size: 14px;
+	color: #ca1515;
+	font-weight: 600;
+	width: 100px;
+}
+
+.shop__cart__offcanvas tbody tr .cart__close {
+	text-align: right;
+}
+
+.shop__cart__offcanvas tbody tr .cart__close span {
+	height: 35px;
+	width: 35px;
+	background: #f2f2f2;
+	border-radius: 50%;
+	font-size: 14px;
+	color: #111111;
+	line-height: 38px;
+	text-align: center;
+	display: inline-block;
+	font-weight: 600;
+	cursor: pointer;
+}
+
+
+.cart__btn__offcanvas {
+	margin: 30px 0;
+}
+
+.cart__btn__offcanvas.update__btn {
+	text-align: right;
+	margin: 30px 0;
+}
+
+.cart__btn__offcanvas a {
+	font-size: 14px;
+	color: #111111;
+	font-weight: 600;
+	text-transform: uppercase;
+	display: inline-block;
+	padding: 14px 30px 12px;
+	background: #f5f5f5;
+}
+
+.cart__btn__offcanvas a span {
+	color: #ca1515;
+	font-size: 14px;
+	margin-right: 5px;
+}
+
+.cart-offcanvas-footer {
+	position: sticky;
+	bottom: 0;
+	background: white;
+	border-top: 1px solid #c7c6c6;
+	margin-top: 20px;
+	padding: 20px 0;
+}
+
+.discount__content__offcanvas h6 {
+	color: #111111;
+	font-weight: 600;
+	text-transform: uppercase;
+	display: inline-block;
+	margin-right: 30px;
+}
+
+.discount__content__offcanvas form {
+	position: relative;
+	width: 300px;
+	display: inline-block;
+}
+
+.discount__content__offcanvas form input {
+	height: 52px;
+	width: 100%;
+	border: 1px solid #444444;
+	border-radius: 50px;
+	padding-left: 30px;
+	padding-right: 115px;
+	font-size: 14px;
+	color: #444444;
+}
+
+.discount__content__offcanvas form input::-webkit-input-placeholder {
+	color: #444444;
+}
+
+.discount__content__offcanvas form input::-moz-placeholder {
+	color: #444444;
+}
+
+.discount__content__offcanvas form input:-ms-input-placeholder {
+	color: #444444;
+}
+
+.discount__content__offcanvas form input::-ms-input-placeholder {
+	color: #444444;
+}
+
+.discount__content__offcanvas form input::placeholder {
+	color: #444444;
+}
+
+.discount__content__offcanvas form button {
+	position: absolute;
+	right: 4px;
+	top: 4px;
+}
+
+.cart__total__procced__offcanvas {
+	background: #f5f5f5;
+	padding: 20px;
+}
+
+.cart__total__procced__offcanvas h6 {
+	color: #111111;
+	font-weight: 600;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+
+.cart__total__procced__offcanvas ul {
+	margin-bottom: 25px;
+}
+
+.cart__total__procced__offcanvas ul li {
+	list-style: none;
+	font-size: 14px;
+	color: #111111;
+	font-weight: 600;
+	overflow: hidden;
+	line-height: 40px;
+}
+
+.cart__total__procced__offcanvas ul li span {
+	color: #ca1515;
+	float: right;
+}
+
+.cart__total__procced__offcanvas .primary-btn {
+	display: block;
+	border-radius: 50px;
+	text-align: center;
+	padding: 12px 0 10px;
 }
