--- a/public/ashion-master/css/style.css
+++ b/public/ashion-master/css/style.css
@@ -326,6 +326,9 @@ ol {
 
 .header__logo {
     padding: 26px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header__logo a {
@@ -408,25 +411,41 @@ ol {
     position: relative;
 }
 
-.header__menu ul li a:after {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background: #ca1515;
-    content: "";
-    -webkit-transition: all, 0.5s;
-    -o-transition: all, 0.5s;
-    transition: all, 0.5s;
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
+/*.header__menu ul li a:after {*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    bottom: 0;*/
+/*    width: 100%;*/
+/*    height: 2px;*/
+/*    background: #ca1515;*/
+/*    content: "";*/
+/*    -webkit-transition: all, 0.5s;*/
+/*    -o-transition: all, 0.5s;*/
+/*    transition: all, 0.5s;*/
+/*    -webkit-transform: scale(0);*/
+/*    -ms-transform: scale(0);*/
+/*    transform: scale(0);*/
+/*}*/
+
+.ant-menu-horizontal {
+    border-bottom: none;
+}
+
+.ant-menu-title-content a {
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #111111;
+    font-weight: 500;
+    padding: 2px 0;
+}
+
+.ant-menu-title-content a:hover {
+    color: #007bff;
 }
 
 .header__right {
     text-align: right;
-    padding: 30px 0 27px;
+    padding: 30px 20px 27px;
 }
 
 .header__right__auth {
