--- a/public/ashion-master/css/style.css
+++ b/public/ashion-master/css/style.css
@@ -99,7 +99,7 @@ a:focus {
     transition: all 0.4s;
     text-decoration: none;
     outline: none;
-    color: #ca1515 !important;
+    color: #ca1515;
 }
 
 ul,
@@ -4213,7 +4213,18 @@ a {
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
 }
 
+.image_categories {
+    border-radius: 15px;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
 
-
+.image_categories:hover {
+    transform: scale(1.02);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+    transition: all .5s ease;
+}
 
 
